--- a/package.json
+++ b/package.json
@@ -14,11 +14,15 @@
   "license": "ISC",
   "dependencies": {
     "@types/amqplib": "^0.8.1",
+    "@types/body-parser": "^1.19.1",
+    "@types/multer": "^1.4.7",
     "amqplib": "^0.8.0",
     "bcryptjs": "^2.4.3",
+    "body-parser": "^1.19.0",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
+    "multer": "^1.4.2",
     "pg": "^8.6.0",
     "typeorm": "^0.2.34"
   },
