--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
+    "mongoose": "^5.13.3",
     "multer": "^1.4.2",
     "pg": "^8.6.0",
     "typeorm": "^0.2.34"
@@ -31,6 +32,7 @@
     "@types/cors": "^2.8.12",
     "@types/express": "^4.17.13",
     "@types/jsonwebtoken": "^8.5.4",
+    "@types/mongoose": "^5.11.97",
     "@types/node": "^16.3.3",
     "cors": "^2.8.5",
     "nodemon": "^2.0.12",
