--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,17 +1,20 @@
 {
-"compilerOptions": {
-    "target": "ES5",                               
-    "module": "commonjs",                                                      
-    "moduleResolution": "node",                 
-    "baseUrl": "./src",               
-    "esModuleInterop": true,                       
-    "skipLibCheck": true,                           
+  "compilerOptions": {
+    "target": "ES5",
+    "module": "commonjs",
+    "moduleResolution": "node",
+    "allowSyntheticDefaultImports": true,
+    "noImplicitAny": true,
+    "baseUrl": "./src",
+    "esModuleInterop": true,
+    "skipLibCheck": true,
     "forceConsistentCasingInFileNames": true,
     "emitDecoratorMetadata": true,
     "experimentalDecorators": true,
-    "typeRoots": [
-        "@types",
-        "./node_modules/@types",
-    ] 
-}
+    "typeRoots": ["@types", "./node_modules/@types"],
+    "paths": {
+      "*": ["node_modules/*", "src/types/*"]
+    }
+  },
+  "include": ["src/**/*"]
 }
